# wsx

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/codex/: SKILL.md
src/: action.rs  app.rs  cache.rs  event.rs  hooks.rs  main.rs  ops.rs  tui.rs
src/config/: global.rs  project.rs
src/git/: info.rs  mod.rs  ops.rs  worktree.rs
src/model/: workspace.rs
src/tmux/: capture.rs  mod.rs  monitor.rs  session.rs
src/ui/: ansi.rs  config_modal.rs  confirm.rs  git_popup.rs  input.rs  mod.rs  picker.rs  preview.rs  workspace_tree.rs
