[package]
name = "wsx"
version = "0.4.1"
edition = "2021"

[[bin]]
name = "wsx"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
dirs = "5"
glob = "0.3"
