[package]
name = "wsx"
version = "0.8.1"
edition = "2021"
description = "TUI workspace manager — git worktrees + tmux sessions in one tree"
license = "MIT"
repository = "https://github.com/vlwkaos/wsx"
readme = "README.md"
keywords = ["tui", "git", "tmux", "worktree", "workspace"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wsx"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
dirs = "5"
glob = "0.3"
